# User-managment

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  verify_email.sh
.github/workflows/: github-actions-demo.yml  lint.yaml  tests.yaml
configs/: database.py  dependencies.py  environment.py
migration/: env.py
migration/versions/: 062e58348126_fix_db.py  c35e90db2a13_check.py  fc7f70566579_refactor.py  fde616e52ab9_final.py
models/: BaseModel.py  GroupModel.py  UserModel.py
proto/: grpc.proto  grpc_pb2.py  grpc_pb2.pyi  grpc_pb2_grpc.py
repositories/: AWSClient.py  AbstractRepository.py  GroupRepository.py  RabbitClient.py  RedisClient.py  UserRepository.py  gRPC_server.py
routers/: AuthRouter.py  GroupRouter.py  UserRouter.py
schemas/: AuthSchemas.py  GroupSchemas.py
services/: AuthService.py  GroupService.py  UserService.py
src/: __init__.py  alembic.ini  aws.py  config.py  database.py  grpc_server.py  logger.py  logging.ini  main.py  models.py  rabbitmq.py
src/auth/: .env  config.py  constants.py  db.py  dependencies.py  router.py  schemas.py  service.py
src/database/: database.py  models.py
src/group/: router.py
src/migration/: env.py
src/migration/versions/: ef738b72d23d_initial.py
src/user/: db.py  dependencies.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/auth/: test_router.py  test_service.py
tests/group/: test_router.py
tests/healthcheck/: test_healthcheck.py
tests/repositories/: test_AWSClient.py
tests/user/: test_router.py
