[tool.poetry]
name = "user-managment"
version = "0.1.0"
description = ""
authors = ["JustPC <robert49324@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
sqlalchemy = "^2.0.25"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
alembic = "^1.13.1"
python-multipart = "^0.0.7"
bcrypt = "4.0.1"
redis = "^5.0.1"
python-abc = "^0.2.0"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
